--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -25,7 +25,16 @@
 <!--                    mapbox:mapbox_cameraZoom="15.0"-->
 <!--                    mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"/>-->
 
-                <com.mapbox.maps.MapView
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
+                mapbox:layout_constraintEnd_toEndOf="parent"
+                mapbox:layout_constraintStart_toStartOf="parent" />
+
+            <com.mapbox.maps.MapView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/mapView"
@@ -35,7 +44,9 @@
                     mapbox:layout_constraintTop_toTopOf="parent"
                     mapbox:mapbox_cameraTargetLat="23.5000"
                     mapbox:mapbox_cameraTargetLng="121.0000"
-                    mapbox:mapbox_cameraZoom="15.0"/>
+                    mapbox:mapbox_cameraZoom="15.0">
+
+            </com.mapbox.maps.MapView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
