--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,9 @@
             android:id="@+id/activity_main_bottom_navigation_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:itemIconTint="@color/bottom_nav_color"
+            app:itemRippleColor="@color/light_yellow"
+            app:itemTextColor="#e9b80c"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
