--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -206,7 +206,7 @@
                 android:background="@color/grey_cccccc"
                 mapbox:layout_constraintEnd_toEndOf="parent"
                 mapbox:layout_constraintStart_toStartOf="parent"
-                mapbox:layout_constraintTop_toBottomOf="@+id/ratingText" />
+                mapbox:layout_constraintTop_toBottomOf="@+id/recyclerComment" />
 
             <View
                 android:id="@+id/greyLine2"
@@ -260,6 +260,19 @@
                 android:src="@drawable/ic_target"
                 app:layout_constraintEnd_toEndOf="@+id/mapView"
                 app:layout_constraintTop_toTopOf="@+id/mapView" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerComment"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:visibility="gone"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/seeComment" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
