--- a/app/src/main/res/layout/item_challenge_comment.xml
+++ b/app/src/main/res/layout/item_challenge_comment.xml
@@ -56,9 +56,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        tools:text="使用者評論"
+        android:layout_marginEnd="24dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userIcon"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toBottomOf="@+id/userName"
+        tools:text="使用者評論" />
+
+    <ImageView
+        android:id="@+id/reportIcon"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/comment"
+        app:srcCompat="@drawable/ic_dot" />
 </androidx.constraintlayout.widget.ConstraintLayout>
