--- a/app/src/main/res/layout/item_challenge_comment.xml
+++ b/app/src/main/res/layout/item_challenge_comment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/greyLine4"
@@ -45,10 +45,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        tools:text="使用者名稱"
         android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/userIcon"
-        app:layout_constraintTop_toTopOf="@+id/userIcon" />
+        app:layout_constraintTop_toTopOf="@+id/userIcon"
+        tools:text="使用者名稱" />
 
     <TextView
         android:id="@+id/comment"
