--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".task.TaskFragment">
@@ -36,21 +35,6 @@
         mapbox:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:focusable="true"
-        app:tint="@android:color/white"
-        android:backgroundTint="@color/light_yellow"
-        android:clickable="true"
-        app:maxImageSize="45dp"
-        app:srcCompat="@drawable/ic_add_white"
-        mapbox:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        mapbox:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,15 +64,28 @@
         mapbox:layout_constraintBottom_toTopOf="@+id/fabChat"
         mapbox:layout_constraintEnd_toEndOf="@+id/fabChat" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/light_yellow"
+        android:clickable="true"
+        android:focusable="true"
+        app:maxImageSize="45dp"
+        app:srcCompat="@drawable/ic_add_white"
+        app:tint="@android:color/white"
+        mapbox:layout_constraintBottom_toTopOf="@+id/TaskRecycler"
+        mapbox:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
-        android:id="@+id/progressBarBorder2"
+        android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="13dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/progress_border"
         mapbox:layout_constraintBottom_toBottomOf="@+id/progressBarBorder"
-        mapbox:layout_constraintEnd_toEndOf="@+id/progressBarBorder"
         mapbox:layout_constraintStart_toEndOf="@+id/progressText"
         mapbox:layout_constraintTop_toTopOf="@+id/progressBarBorder" />
 
@@ -97,13 +94,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="3/5"
+        android:text="0/5"
         mapbox:layout_constraintBottom_toBottomOf="@+id/progressBarBorder"
         mapbox:layout_constraintStart_toStartOf="@+id/progressBarBorder"
         mapbox:layout_constraintTop_toTopOf="@+id/progressBarBorder" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/guideTextRecycler"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        mapbox:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="@+id/mapView"
+        mapbox:layout_constraintTop_toBottomOf="@+id/progressBarBorder" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/TaskRecycler"
         android:layout_width="0dp"
         android:layout_height="130dp"
         android:layout_marginBottom="10dp"
@@ -111,6 +119,8 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
         mapbox:layout_constraintEnd_toEndOf="parent"
-        mapbox:layout_constraintStart_toStartOf="@+id/mapView" />
+        mapbox:layout_constraintStart_toStartOf="@+id/mapView">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
