--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -255,11 +255,11 @@
                 android:id="@+id/myLocation"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:src="@drawable/ic_target"
-                app:layout_constraintEnd_toEndOf="@+id/mapView"
-                app:layout_constraintTop_toTopOf="@+id/mapView" />
+                app:layout_constraintBottom_toBottomOf="@+id/mapView"
+                app:layout_constraintEnd_toEndOf="@+id/mapView" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerComment"
