--- a/app/src/main/res/layout/item_task_guide.xml
+++ b/app/src/main/res/layout/item_task_guide.xml
@@ -8,9 +8,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/guideTextCardView"
         android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,9 +24,8 @@
             <ImageView
                 android:id="@+id/android"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_height="66dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_android" />
@@ -36,10 +35,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
                 android:text="TextView"
                 android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/android"
-                app:layout_constraintTop_toTopOf="@+id/android" />
+                app:layout_constraintTop_toTopOf="@+id/android"
+                app:layout_constraintVertical_bias="0.5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
