finish task success fragment ui

--- a/app/src/main/res/layout/fragment_task_dialog.xml
+++ b/app/src/main/res/layout/fragment_task_dialog.xml
@@ -24,11 +24,11 @@
         tools:text="AppWorks美食大挑戰" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/editTextAnswer"
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
@@ -36,6 +36,7 @@
         android:hint="  輸入你的答案"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question" />
 
@@ -54,5 +55,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
