--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_yellow">#fbe493</color>
     <color name="deep_yellow">#fcd340</color>
-    <color name="grey">#85816f</color>
+    <color name="grey">#8E8B81</color>
     <color name="grey_cccccc">#cccccc</color>
     <color name="food_type">#FFFFB907</color>
     <color name="green_progress">#4C9900</color>
