--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -79,7 +79,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerPhoto"
+            android:id="@+id/recyclerStage"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
