--- a/app/src/main/res/layout/fragment_invite.xml
+++ b/app/src/main/res/layout/fragment_invite.xml
@@ -40,6 +40,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/guide2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="已加入玩家"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/greyLine8" />
+
     <Button
         android:id="@+id/copyButton"
         android:layout_width="wrap_content"
@@ -49,7 +62,7 @@
         android:text="複製"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/challengeKey"
-        app:layout_constraintEnd_toEndOf="@+id/guide"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/challengeKey"
         app:layout_constraintTop_toTopOf="@+id/challengeKey" />
 
@@ -83,12 +96,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/startChallengeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/greyLine8" />
+        app:layout_constraintTop_toBottomOf="@+id/guide2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
