--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,10 +4,4 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-tools:context=".profile.ProfileFragment">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+tools:context=".profile.ProfileFragment"/>
