--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -98,7 +98,7 @@
         android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="13dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/progress_border"
         mapbox:layout_constraintBottom_toBottomOf="@+id/progressBarBorder"
         mapbox:layout_constraintStart_toEndOf="@+id/progressText"
@@ -106,7 +106,7 @@
 
     <TextView
         android:id="@+id/progressText"
-        android:layout_width="wrap_content"
+        android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="0/5"
