--- a/app/src/main/res/layout/fragment_invite.xml
+++ b/app/src/main/res/layout/fragment_invite.xml
@@ -21,12 +21,14 @@
 
     <TextView
         android:id="@+id/challengeKey"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="ADFASDFASADF"
+        android:layout_marginEnd="16dp"
+        android:text="ADFASDFASADFasfasfdasfasdfasfdasdfasd"
         android:textSize="22sp"
+        app:layout_constraintEnd_toStartOf="@+id/copyButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guide" />
 
@@ -85,11 +87,12 @@
         android:id="@+id/qrCode"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/image_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/copyButton" />
+        app:layout_constraintTop_toBottomOf="@+id/challengeKey" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userRecycler"
