--- a/app/src/main/res/layout/fragment_log_dialog.xml
+++ b/app/src/main/res/layout/fragment_log_dialog.xml
@@ -90,11 +90,11 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:scaleType="centerCrop"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageBorder"
         app:layout_constraintEnd_toEndOf="@+id/imageBorder"
         app:layout_constraintStart_toStartOf="@+id/imageBorder"
         app:layout_constraintTop_toTopOf="@+id/imageBorder"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@null" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
